# ros2_restapi_example

./: CMakeLists.txt  package.xml
launch/: example_1.launch.py  example_2.launch copy 2.py  homework.launch.py  structure.launch.py
scripts/: rest_server.py  ros2_rest_client_get.py  ros2_rest_client_post.py  ros2_rest_client_put.py
